--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "firebase": "^5.8.6",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-responsive-modal": "^3.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "recompose": "^0.30.0"
